crates/rstest-bdd-macros/tests/fixtures/step_struct_pattern.rs
use rstest_bdd_macros::given;

struct User {
    name: String,
}

#[given("user data")]
fn step_with_struct(User { name }: User) {}

fn main() {}
